# smart-route-ai

./: .gitignore
docs/architecture/: database-design-v1.md
services/backend-service/: pyproject.toml
services/backend-service/alembic/: env.py
services/backend-service/alembic/versions/: 69a59122d663_add_unique_constraint_to_intersection_.py  8d32a0cd70ce_add_constraints_to_intersections.py  cbdcc06d53d7_create_intersections_table.py
services/backend-service/src/api/: router.py
services/backend-service/src/api/dependencies/: database.py
services/backend-service/src/api/routes/: health.py
services/backend-service/src/config/: settings.py
services/backend-service/src/core/: app.py  context.py  lifespan.py
services/backend-service/src/core/database/: __init__.py  engine.py  session.py
services/backend-service/src/core/database/models/: base_entity.py
services/backend-service/src/core/enums/: __init__.py  ai.py  camera.py  common.py  intersection.py  signal.py
services/backend-service/src/core/exceptions/: base.py  handlers.py  intersection.py
services/backend-service/src/core/logging/: app_logger.py  events.py  logger.py
services/backend-service/src/core/middleware/: request_logging.py
services/backend-service/src/domain/intersection/: __init__.py  dependencie.py  models.py  repositories.py  router.py  services.py
services/backend-service/src/domain/intersection/schemas/: __init__.py  request.py  response.py
