[project]
name = "backend-service"
version = "0.1.0"
description = "Backend API for SmartRoute AI"
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Siddharth Gupta" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"